# Acruc-White

./: README.md
Code/Dashboard UI/: README.md  air_q.html  aqi.html  index.html  package-lock.json  package.json  requirement.txt
Code/Dashboard UI/backend/: ble_scanner.py  ibeacon_ad.py  main.py  mqtt_client.py  mqtt_server.py
Code/Dashboard UI/src/: App.css  App.jsx  dashboardLayout.module.css  mockApi.js
Code/Dashboard UI/src/components/: AQI.jsx  AQIGraph.jsx  AirQualityGraph.jsx  DashboardLayout.jsx  FlowerController.jsx  Footer.jsx  MainHeader.jsx  OtherMetrics.jsx  SensorReadings.jsx  Sidebar.jsx
Code/Dashboard UI/src/hooks/: useSensorData.jsx
Code/Embedded/: README.md
Code/Embedded/ZephyrOS/mycode/apps/src/: ble_test.c  gatt_test.c  pro_test.c  project.c  test.c
Code/Embedded/thingy52/: CMakeLists.txt  prj.conf
Code/Embedded/thingy52/include/: ccs811_sensor.h  hts221_sensor.h  lps22hb_sensor.h  thingy52_ibeacon.h
Code/Embedded/thingy52/mylib/: CMakeLists.txt  ccs811_sensor.c  hts221_sensor.c  lps22hb_sensor.c  thingy52_ibeacon.c
Code/Embedded/thingy52/src/: main.c
